package Cartes;

public class Chat extends Cartes_animaux{
}
