package Cartes;

public class Corbeau extends Cartes_animaux{
}
