package Cartes;

public class Coyote extends Cartes_animaux{
}
