package Cartes;

public class Ecureuil extends Cartes_animaux{
}
