package Cartes;

public class Grizzly extends Cartes_animaux{
}
