package Cartes;

public class Hermine extends Cartes_animaux{
}
