package Cartes;

public class Loup extends Cartes_animaux{
}
