package Cartes;

public class Louveteau extends Cartes_animaux{
}
