package Cartes;

public class Moineau extends Cartes_animaux{
}
