package Cartes;

public class Punaise extends Cartes_animaux{
}
