package Cartes;

public class Rocher extends Cartes_obstacles{
}
