package Cartes;

public class Sapin extends Cartes_obstacles{
}
