@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

class Main {
    +{static}main(args : String[])
}

package inscryption
{
    class PlateauAffichage {
            - m_datas : PlateauLogic
            +isVictorieux() : Boolean

        }

        class PlateauLogic {
                -m_victoire : Boolean
                +isVictorieux() : Boolean

        }

        package players {

        class Player {

        }

        class Opponent {

        + setFirstMatch() : Void
        + setSecondMatch() : Void
        + setThirdMatch() : Void
        + play() : void

        }

        }

        Opponent o--> cartes.Cartes : - m_actions : Cartes[0..4]

    package cartes {

        abstract class Cartes <<abstract>>{
            -m_nom : String
            -m_points_de_vie : Integer
            +<<create>> Cartes_obstacles(nom : String , pdv : Integer)
            +getNom() : String
            +getPointsDeVie() : Integer

        }

        abstract class Cartes_animaux<<abstract>> extends Cartes{
        -m_attaque : Integer
        -m_gouttes_de_sang : Integer
        -m_os : Integer
        -m_volant : Boolean
        +<<create>>Cartes_animaux(nom : String, att : Integer, pdv : Integer, gds : Integer, os : Integer, vol : Boolean)
        +getAttaque() : Integer
        +getGouttesDeSang(): Integer
        +getOs() : Integer
        +isVolant() : Boolean
        }
        class Chat extends Cartes_animaux{
            +<<create>>Chat()
        }
        class Grizzly extends Cartes_animaux{
            +<<create>>Grizzly()
        }
        class Coyote extends Cartes_animaux{
            +<<create>>Coyote()
        }
        class Moineau extends Cartes_animaux{
            +<<create>>Moineau()
        }
        class Corbeau extends Cartes_animaux{
            +<<create>>Corbeau()
        }
        class Ecureuil extends Cartes_animaux{
            +<<create>>Ecureuil()
        }
        class Hermine extends Cartes_animaux{
            +<<create>>Hermine()
        }
        class Louveteau extends Cartes_animaux{
            +<<create>>Louveteau()
        }
        class Loup extends Cartes_animaux{
            +<<create>>Loup()
        }
        class Punaise extends Cartes_animaux{
            +<<create>>Punaise()
        }
        class Rocher extends Cartes{
            +<<create>>Rocher()
        }
        class Sapin extends Cartes{
            +<<create>>Sapin()
        }
    }
}


PlateauAffichage o--> Cartes_animaux
PlateauAffichage o--> Cartes
Main .-> PlateauAffichage : <<create>>
Main .-> inscryption : <<uses>>
@enduml